@@ -1,4 +1,4 @@
 DIST javacup-0.11a_beta20060608.tar.bz2 285727 RMD160 232a13874313242eb8b904267c528ca6111031f8 SHA1 1c5d6b910d8ae5889d98b101151efce857e9da7f SHA256 cb3ad4951d734bd1e5a6ff835018dea26a47564f820ae0a925f9c30f2fb7e1ff
-EBUILD javacup-0.11a_beta20060608.ebuild 1659 RMD160 741acfaca0404df73f229b83b32a396de8a64394 SHA1 77064aab030f6589efd5a147e20f1dceff6e8d7f SHA256 1a9004c306e94c95bbd3a246471619b129c98ed9a0c9d8302361f6aca1b0712a
-MISC ChangeLog 2664 RMD160 01fba98c5973cc2cd9ad73e76853bc5d54803dcf SHA1 4c4f0df270ff333b33f2da66e3a1ce1e271253bb SHA256 8061f1a90d7ab8e66050bf71344f31714bf93b9a7a3666630d0083dbcaab2c6e
+EBUILD javacup-0.11a_beta20060608.ebuild 1633 RMD160 8480dd7670774461429e0931f0dd10bbb71c0fc3 SHA1 53b10202b94b232cad802e08c5f165de513221d4 SHA256 169f6679718c4d05cd0233f4415376e601a848e8d109f9943077dc3c226f592f
+MISC ChangeLog 2800 RMD160 b746fb07960ebbb15fcb2a0ef533e684080ecf64 SHA1 a6d98cd82a90e719dca984bb0574d32a703dbfa2 SHA256 4695d2b67013cedee12789325034f0659171d12cdacc8a30aae786a3976afea4
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
